<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AddProductFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <EditText
            android:id="@+id/editText_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_product"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/product_image_description"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_product_name" />

        <Button
            android:id="@+id/button_pick_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_product" />


        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:hint="@string/product_category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewCategory"
            app:layout_constraintTop_toBottomOf="@+id/button_pick_image" />

        <Button
            android:id="@+id/button_save_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_product"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <Button
            android:id="@+id/button_edit_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_product"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editText_quantity"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/product_quantity"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_category" />

        <EditText
            android:id="@+id/editText_Expiration_Date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/product_expiration_date"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_quantity" />

        <Spinner
            android:id="@+id/spinner_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:hint="@string/product_state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewState"
            app:layout_constraintTop_toBottomOf="@+id/editText_Expiration_Date" />

        <Switch
            android:id="@+id/switch_discarded"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/product_is_discarded"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_state" />

        <TextView
            android:id="@+id/textViewCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Category:"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_pick_image" />

        <TextView
            android:id="@+id/textViewState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="State"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_Expiration_Date" />

        <Spinner
            android:id="@+id/spinner_unit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toEndOf="@+id/editText_quantity"
            app:layout_constraintTop_toBottomOf="@+id/spinner_category" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
