<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="16dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="5dp"
    app:cardBackgroundColor="@color/light_grey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_product"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/product_image"
            android:scaleType="fitXY"
            android:src="@drawable/product1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_product_category"
            app:layout_constraintStart_toEndOf="@+id/iv_product"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_product_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/product_category"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/iv_product"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

        <TextView
            android:id="@+id/tv_product_expiration_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/product_expiration_date"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/iv_product"
            app:layout_constraintTop_toBottomOf="@id/tv_product_category" />

        <TextView
            android:id="@+id/tv_product_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/product_quantity"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/iv_product"
            app:layout_constraintTop_toBottomOf="@id/tv_product_expiration_date" />

        <TextView
            android:id="@+id/tv_product_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/product_state"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/iv_product"
            app:layout_constraintTop_toBottomOf="@id/tv_product_amount" />

        <TextView
            android:id="@+id/tv_product_is_discarded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/product_is_discarded"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/iv_product"
            app:layout_constraintTop_toBottomOf="@id/tv_product_state" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
